--- a/Vanrise/Code/Vanrise.Web/Client/Views/Default.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Views/Default.html
@@ -1,8 +1,16 @@
 ﻿<h1> default</h1>
 <input type="text" ng-model="testModel" />
     {{testModel}}
-
-
+ff
+<vr-row>
+    <vr-columns width="normal"><div style="width:100%;background-color:red">normal</div></vr-columns>
+    <vr-columns width="small"><div style="width:100%;background-color:red">small</div></vr-columns>
+    <vr-columns width="large"><div style="width:100%;background-color:red">large</div></vr-columns>
+    <vr-columns width="1/4row"><div style="width:100%;background-color:red">1/4</div></vr-columns>
+    <vr-columns width="1/3row"><div style="width:100%;background-color:red">1/3</div></vr-columns>
+    <vr-columns width="1/2row"><div style="width:100%;background-color:red">1/2</div></vr-columns>
+    <vr-columns width="fullrow"><div style="width:100%;background-color:red">full</div></vr-columns>
+</vr-row>
 <input type="button" ng-click="postMsg()" value="Post" />
 
 <vr-datagridcell htmltemplate='html'>
