--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/InstanceEditor.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/InstanceEditor.html
@@ -3,9 +3,9 @@
 
         <!--<div ng-include src="/Client/Modules/FraudAnalysis/Views/test.html">
         </div>-->
-        <!--{{BPDefinitionObj.Configuration.Url}}-->
+        {{BPDefinitionObj.Configuration.Url}}
         <vr-row>
-            <div ng-include src="'/Client/Modules/FraudAnalysis/Views/StrategyManagement.html'">
+            <div ng-include src="'/Client/Modules/FraudAnalysis/Views/ExecuteStrategyProcessInput.html'">
             </div>
         </vr-row>
     </vr-modalbody>
