--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/SchedulerTaskEditor.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/SchedulerTaskEditor.html
@@ -1,18 +1,20 @@
-﻿<div vr-modalcontent ng-controller="Security_RoleEditorController">
+﻿<div vr-modalcontent ng-controller="Runtime_SchedulerTaskEditorController">
     <vr-modalbody width="'50%'" vr-loader="isGettingData">
-        <vr-form name="formRoleEditor">
+        <vr-form name="formSchedulerTaskEditor">
             <vr-row>
-                <vr-textbox value="name" label="Name" isrequired></vr-textbox>
-            </vr-row>
-            <vr-row>
-                
+                <vr-columns colnum="6">
+                    <vr-textbox value="name" label="Name" isrequired></vr-textbox>
+                </vr-columns>
+                <vr-columns colnum="6">
+                    <vr-switch value="isEnabled" label="Is Enabled"></vr-switch>
+                </vr-columns>
             </vr-row>
         </vr-form>
     </vr-modalbody>
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formRoleEditor" data-onclick="SaveRole"></vr-button>
+                <vr-button type="Save" formname="formSchedulerTaskEditor" data-onclick="SaveTask"></vr-button>
                 <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
