--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/CustomerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/CustomerTemplate.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="RoutingRules_CustomerTemplateController">
-    <vr-row>
-        <vr-columns colnum="4">
+    <vr-row removeline>
+        <vr-columns width="normal">
             <div class="dropdown dropdown-custom " id="dropdownMenuddl">
 
                 <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" ng-style="carrierAccountSelectionOption==2?{'color':'#D44A47'}:''" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption'>
@@ -17,11 +17,6 @@
                     </li>
                 </ul>
             </div>
-        </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns colnum="4">
-
             <vr-select ismultipleselection isrequired datasource="customers" selectedvalues="selectedCustomers" datatextfield="Name" datavaluefield="CarrierAccountID"
                        entityname="Customers"></vr-select>
         </vr-columns>
