--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/ZoneTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/ZoneTemplate.html
@@ -1,7 +1,8 @@
 ﻿<div ng-controller="RoutingRules_ZoneTemplateController">
 
+
     <vr-row removeline>
-        <vr-columns colnum="6" colnumsm="4">
+        <vr-columns width="normal">
             <div class="dropdown dropdown-custom" id="Zoneddl">
                 <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" ng-style="zoneSelectionOption==2?{'color':'#D44A47'}:''" id="dropdownMenuZo" data-toggle="dropdown" aria-expanded="true" ng-model='zoneSelectionOption'>
                     {{zoneSelectionOption == 1 ? "  Zones: " : "  All Zones Except:"}}
@@ -16,25 +17,14 @@
                     </li>
                 </ul>
             </div>
-
-        </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns colnum="4">
             <vr-select ismultipleselection isrequired datasource="searchZones" selectedvalues="optionsZones.selectedvalues" datatextfield="Name" datavaluefield="ZoneId"
                        entityname="Zones"></vr-select>
 
         </vr-columns>
-    </vr-row>
 
 
-    <vr-row removeline>
-        <vr-columns colnum="4">
+        <vr-columns width="normal">
             <vr-label standalone>Excluded Codes</vr-label>
-        </vr-columns>
-    </vr-row>
-    <vr-row removeline>
-        <vr-columns colnum="4">
             <div class="dropdown" id="CodeListddl">
                 <button class="btn btn-default dropdown-toggle" style="width:100%;position:relative" type="button" id="dropdownMenucodes" data-toggle="dropdown" aria-expanded="true">
                     <span style="float:left;margin:0px"> {{getCodes()}}</span>
@@ -67,6 +57,7 @@
                 </ul>
             </div>
         </vr-columns>
+
     </vr-row>
 
 
