--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
@@ -3,7 +3,7 @@
 
         <vr-form name="formRouteRuleEditor">
             <vr-row removeline>
-                <vr-columns colnum="6">
+                <vr-columns colnum="12">
                     <vr-choices on-ready="choicesRuleTypeReady">
                         <vr-choice isselected="choiceRuleDefinitionSelected">Rule Definition</vr-choice>
                         <vr-choice isselected="choiceCarrierSetSelected">Carrier Set</vr-choice>
@@ -14,19 +14,21 @@
             </vr-row>
             <div ng-show="choiceRuleDefinitionSelected">
                 <vr-row>
-                    <vr-columns colnum="2">
+                    <vr-columns colnum="3">
                         <vr-select label="Rule Type:" datatextfield="name" datavaluefield="objectType" isrequired
                                    onselectionchanged="onchangeRouteRule" datasource="ruleTypes" selectedvalues="selectedRuleType"></vr-select>
 
                     </vr-columns>
                 </vr-row>
-                <vr-row ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' ">
-                    <div class="col-lg-12 ">
+                <h4 ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' ">{{selectedRuleType.name}} Details:</h4>
+                <vr-row ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' " ng-include src="selectedRuleType.url">
+                    
+                    <!--<div class="col-lg-12 ">
                         <h4>{{selectedRuleType.name}} Details:</h4>
                     </div>
-                    <div style="min-height:70px" ng-include src="selectedRuleType.url">
+                    <div style="min-height:70px">
 
-                    </div>
+                    </div>-->
                 </vr-row>
                 <vr-row removeline>
                     <vr-columns colnum="12">
@@ -37,29 +39,25 @@
             </div>
             <div ng-show="choiceCarrierSetSelected">
                 <vr-row>
-                    <vr-columns column="6">
-                        <vr-select datatextfield="name" datavaluefield="name"
+                    <vr-columns colnum="3">
+                        <vr-select label="Carrier Set Type" datatextfield="name" datavaluefield="name"
                                    onselectionchanged="update2" datasource="customerSets" selectedvalues="selectedCustomerSet"></vr-select>
                     </vr-columns>
 
                 </vr-row>
-                <vr-row>
-                    <div ng-include src="selectedCustomerSet.url">
-                    </div>
+                <vr-row ng-include src="selectedCustomerSet.url">
                 </vr-row>
             </div>
             <div ng-show="choiceDestinationSelected">
                 <vr-row>
-                    <vr-columns column="6">
-                        <vr-select datatextfield="name" datavaluefield="name"
+                    <vr-columns colnum="3">
+                        <vr-select label="Destination Type" datatextfield="name" datavaluefield="name"
                                    datasource="codeSets" selectedvalues="selectedCodeSet" onselectionchanged="onchangeEditorType"></vr-select>
                     </vr-columns>
 
                 </vr-row>
 
-                <vr-row>
-                    <div ng-include src=" selectedCodeSet.url">
-                    </div>
+                <vr-row ng-include src=" selectedCodeSet.url">
 
                 </vr-row>
             </div>
