--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
@@ -18,8 +18,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
         <div class="container">
             <div class="navbar-header">
-
-
+                <img src="/Client/Images/logoonheader.png" />
             </div>
             <div id="navbar">
 
