--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/InstanceEditor.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/InstanceEditor.html
@@ -1,4 +1,4 @@
-﻿<div vr-modalcontent width="'75%'" ng-controller="FraudAnalysis_InstanceEditorController">
+﻿<div vr-modalcontent width="'50%'" ng-controller="FraudAnalysis_InstanceEditorController">
     <vr-modalbody vr-loader="isGettingData">
 
         <!--<div ng-include src="/Client/Modules/FraudAnalysis/Views/test.html">
@@ -9,6 +9,16 @@
             </div>
         </vr-row>
     </vr-modalbody>
+
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="Save" data-onclick="startInstance" formname="formExecuteStrategyProcessInput"></vr-button>
+                <vr-button type="Close" data-onclick="close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+
 </div>
 
 
