--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
@@ -4,27 +4,19 @@
             <div ng-hide="filterSectionCollapsed">
                 <vr-row removeline>
                     <vr-columns colnum="6">
-                        <vr-textbox label="Message:" value="message"></vr-textbox>
+                        <vr-textbox label="Message:" value="message" onvaluechanged="onMessageChange" ></vr-textbox>
                     </vr-columns>
                     <vr-columns colnum="6">
                         <vr-select label="Severity" ismultipleselection hideselectedvaluessection="true" datatextfield="Description" datavaluefield="Value"
-                                   datasource="::trackingSeverity" selectedvalues="selectedTrackingSeverity"></vr-select>
+                                   datasource="::trackingSeverity" selectedvalues="selectedTrackingSeverity" onselectionchanged="onSelectionChange"></vr-select>
                     </vr-columns>
                 </vr-row>
                 <vr-row>
                 </vr-row>
             </div>
-            <vr-row removeline>
-                <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-                    <div transclude-to="buttons">
-                        <vr-button type="Search" formname="formBPTrackingModal" data-onclick="searchClicked"></vr-button>
-                    </div>
-                </vr-actionbar>
-            </vr-row>
-
             <vr-row>
                 <vr-columns colnum="12">
-                    <vr-datagrid datasource="::datasource" loadmoredata="loadMoreData" on-ready="onGridReady">
+                    <vr-datagrid datasource="::datasource" search="searchGrid" loadmoredata="loadMoreData" on-ready="onGridReady">
                         <vr-datagridcolumn headertext="'Message'" field="'Message'" widthfactor="50"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Event Time'" widthfactor="30">{{dataItem.EventTime | date:'yyyy-MM-dd hh:mm:ss' }}</vr-datagridcolumn>
