--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
@@ -4,11 +4,11 @@
             <div ng-hide="filterSectionCollapsed">
                 <vr-row removeline>
                     <vr-columns colnum="6">
-                        <vr-textbox label="Message:" value="message" onvaluechanged="onMessageChange" ></vr-textbox>
+                        <vr-textbox label="Message:" value="message"  ></vr-textbox>
                     </vr-columns>
                     <vr-columns colnum="6">
                         <vr-select label="Severity" ismultipleselection hideselectedvaluessection="true" datatextfield="Description" datavaluefield="Value"
-                                   datasource="::trackingSeverity" selectedvalues="selectedTrackingSeverity" onselectionchanged="onSelectionChange"></vr-select>
+                                   datasource="::trackingSeverity" selectedvalues="selectedTrackingSeverity" ></vr-select>
                     </vr-columns>
                 </vr-row>
                 <vr-row>
@@ -16,7 +16,7 @@
             </div>
             <vr-row>
                 <vr-columns colnum="12">
-                    <vr-datagrid datasource="::datasource" search="searchGrid" loadmoredata="loadMoreData" on-ready="onGridReady">
+                    <vr-datagrid datasource="::datasource"  loadmoredata="loadMoreData" on-ready="onGridReady" clientsidefilter="filterGrid">
                         <vr-datagridcolumn headertext="'Message'" field="'Message'" widthfactor="50"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Event Time'" widthfactor="30">{{dataItem.EventTime | date:'yyyy-MM-dd hh:mm:ss' }}</vr-datagridcolumn>
