TOne v2 (new layout)
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24108

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
@@ -18,11 +18,11 @@
                         <vr-button type="Login" formname="formLogin" data-onclick="Login"></vr-button>
                     </div>
                 </div>
-                <!--<div class="row login-spacer">
+                <div class="row login-spacer">
                     <div class="col-md-8 col-md-offset-2">
-                        <button value="Login" class="btn btn-danger login-btn" style="width:100%" ng-click="Login()">LOGIN</button>
+                        <a href="" class="pull-right fogetten-label">Forgotten Password</a>
                     </div>
-                </div>-->
+                </div>
             </vr-form>
         </div>
     </div>
