--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -20,9 +20,11 @@
     <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
         <div class="container">
             <div class="navbar-header">
-
-                Welcome {{::userDisplayName}} - <a href="#" ng-click="logout()">Logout</a>
-                <img src="Client/Images/logoonheader.png" />
+                <img src="Client/Images/logoonheader.png" class="minilogo" />
+                <img src="Client/Images/01.png" class="img1" />
+                <img src="Client/Images/02.png" class="img2" />
+               
+                
 
             </div>
             <div id="navbar">
@@ -30,15 +32,21 @@
             </div><!--/.nav-collapse -->
         </div>
     </nav>
+    <div  class="sub-header" ng-class="toogled==true?'sub-header-open':'sub-header-closed'">
+        <div class="inner-sub ">
+            Welcome {{::userDisplayName}} - <a href="#" ng-click="logout()">Logout</a>
+        </div>
+       
+    </div>
     <div id="wrapper" ng-style="toogled==true?{'padding-left':'225px'}:{'padding-left':'5px'}">
         <!-- Sidebar -->
         <div id="sidebar-wrapper" ng-style="toogled==true?{'width':'250px'}:{'width':'2px'}">
 
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" ng-show="toogled==true">
                 <div class="panel panel-default toggle-panel ">
-                    <div class="panel-heading dll-menu" style="height: 40px;">
+                    <div class="panel-heading dll-menu" style="height: 41px;">
 
-                        <span style="font-size: 20px; margin: 0px 4px; position: absolute; right: 5px; top: 5px;" ng-click="toggledpanel()" class=" hand-cursor glyphicon glyphicon-chevron-left "></span>
+                        <span style="font-size: 20px; margin: 6px 4px; position: absolute; right: 5px; top: 5px;" ng-click="toggledpanel()" class=" hand-cursor glyphicon glyphicon-chevron-left "></span>
 
 
                     </div>
@@ -84,16 +92,24 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="clock" >
+                   @*// Wed 13 May,2105 15:15*@
+                    <span ng-bind="clock  | date:'EEE dd MMM , yyyy'"></span>
+                    <span class="clockspace"></span>
+                    <span style="color: #6a6a6a;font-weight:bold" ng-bind="clock  | date:'hh:mm'"> </span>
+                </div>
             </div>
-            <div id="collapsedmenu" style="background-color:#ddd;height:100%;width:30px;position:fixed;z-index:10" ng-show="toogled==false">
-                <div class="dropdown dropdown-custom-serf leftdiv">
-                    <div class="dropdown-toggle hand-cursor glyphicon glyphicon glyphicon-chevron-right" ng-click="toggledpanel()" style="font-size: 20px; margin: 0px 4px;">
+
+            <div id="collapsedmenu" style="background-color:#ddd;height:100%;width:40px;position:fixed;z-index:10" ng-show="toogled==false">
+                <div class="dropdown dropdown-custom-serf leftdiv" >
+                    <div class="dropdown-toggle hand-cursor glyphicon glyphicon glyphicon-chevron-right dropdown-item" ng-click="toggledpanel()" >
 
                     </div>
                 </div>
 
                 <div ng-repeat="item in menuItems" class="dropdown dropdown-custom-serf leftdiv " ng-style="{'background-color':'#{{item.color}}; !important'}" ng-mouseenter="showMenu($event)" ng-mouseleave="hideMenu($event)">
-                    <div class="dropdown-toggle hand-cursor glyphicon dll-menu-theme " ng-class="item.Icon" style="font-size:20px;margin:0px 4px" id="dropdownMenuCu-{{$index}}" aria-expanded="true" data-toggle="dropdown">
+                    <div class="dropdown-toggle hand-cursor glyphicon dll-menu-theme dropdown-item" ng-class="item.Icon" id="dropdownMenuCu-{{$index}}" aria-expanded="true" data-toggle="dropdown">
 
                     </div>
                     <ul class="dropdown-menu dropdown-menu-custom-serf" role="menu" aria-labelledby="dropdownMenuCu-{{$index}}">
@@ -116,26 +132,20 @@
                         </li>
                     </ul>
                 </div>
-                @*</li>
-
-                    </ul>*@
-
+                <div class="clock collapsed" >
+                    @*// Wed 13 May,2105 15:15*@
+                    <span ng-bind="clock  | date:'EEE dd MMM , yyyy'"></span>
+                    <span class="clockspace"></span>
+                    <span style="color: #6a6a6a; font-weight: bold" ng-bind="clock  | date:'hh:mm'"> </span>
+                </div>
             </div>
         </div>
+    
         <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid vr-container">
-                <div class="row">
-                    <div class="col-lg-12 sub-header">
-                        @*<ol class="breadcrumb breadcrumb-vr">
-                            <li><a href="#/default">Home</a></li>
-                            <li ng-show="parent!=null"><a href="">{{parent.Name}}</a></li>
-                            <li class="active" ng-show="child!=null">{{child.Name}}</li>
-                        </ol>*@
-                        <img src="Client/Images/01.png" class="img1" />
-                        <img src="Client/Images/02.png" class="img2" />
-                    </div>
+                <div class="row">                    
 
                     <div class="panel-primary panel-vr his-nav" ng-if="hisnav.length > 0 ">
                         <div class="panel-heading">
