--- a/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
@@ -182,5 +182,46 @@
   background: -moz-linear-gradient(bottom,rgba(255, 0, 0, 0.20),#0074d9); /*Fx 3.6-15*/
   background: linear-gradient(to bottom, rgba(255, 0, 0, 0.20),  #0074d9); /*Standard*/
 }
+/*20407d
+c0213f
+f27043
+806dbb
+3c9787
+e22337
+01a082
+f79624
+9e1f63
+01a4b5*/
 
+.drill-down-level-0{
+    background-color :#20407d;
+}
+.drill-down-level-1{
+    background-color :#c0213f;
+}
+.drill-down-level-2{
+    background-color :#f27043;
+}
+.drill-down-level-3{
+    background-color :#806dbb;
+}
+.drill-down-level-4{
+    background-color :#3c9787;
+}
+
+.drill-down-level-5{
+    background-color :#20407d;
+}
+.drill-down-level-6{
+    background-color :#c0213f;
+}
+.drill-down-level-7{
+    background-color :#f27043;
+}
+.drill-down-level-8{
+    background-color :#806dbb;
+}
+.drill-down-level-9{
+    background-color :#3c9787;
+}
 
