--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -132,7 +132,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="clock collapsed" >
+                <div class="clock collapsed-clock">
                     @*// Wed 13 May,2105 15:15*@
                     <span ng-bind="clock  | date:'EEE dd MMM , yyyy'"></span>
                     <span class="clockspace"></span>
