--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingManagement/RoutingManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingManagement/RoutingManagement.html
@@ -1,11 +1,8 @@
 ﻿<vr-panel ng-controller="Routing_RoutingManagementController">
     <vr-form name="formFilter">
-
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
-
                 <vr-columns colnum="2">
-
                     <vr-select label="Customer" ismultipleselection datasource="customers" selectedvalues="selectedCustomers" datatextfield="Name" datavaluefield="CarrierAccountID"
                                entityname="Customers">
                     </vr-select>
@@ -18,13 +15,11 @@
                     </div>
                     <vr-select ng-show="option == 1" ismultipleselection datasource="zones" selectedvalues="selectedZones" datatextfield="Name" datavaluefield="ZoneId"
                                entityname="Zones"></vr-select>
-                    <number-filed ng-show="option == 2" input-value="code" place-holder="'Type Code'" />
-
+                    <vr-textbox ng-show="option == 2" value="code" place-holder="'Type Code'"></vr-textbox>
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
         </div>
-
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
@@ -32,32 +27,41 @@
                 </div>
             </vr-actionbar>
         </vr-row>
-
     </vr-form>
     <div>
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-datagrid onsortchanged="onMainGridSortChanged" datasource="routingDataSource" loadmoredata="loadMoreData" on-ready="gridReady" menuactions="gridMenuActions">
-                    <vr-datagridcolumn headertext="'CustomerName'" field="'CustomerName'">
+                    <vr-datagridcolumn ng-show="selectedCustomers.length !=1" headertext="'CustomerName'" field="'CustomerName'">
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Code'" field="'Code'">
                     </vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Zone'" field="'SaleZoneId'">
+                    <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'">
                     </vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'ServicesFlag'" field="'ServicesFlag'">
+                    <vr-datagridcolumn headertext="'ServicesFlag'" field="'ServicesFlag'" widthfactor="5">
                     </vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Rate'" field="'Rate'">
+                    <vr-datagridcolumn headertext="'Rate'" field="'Rate'" widthfactor="5">
                     </vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Rate'">
-                        <span ng-repeat="option in dataItem.Options">{{option.Supplier}}   {{option.Percentage}}</span>
+                    <vr-datagridcolumn headertext="'Suppliers'" field="'suppliers'" widthfactor="30">
                     </vr-datagridcolumn>
                     <vr-datagridexpandablerow>
-                        {{dataItem.Options}}
+                        <vr-datagrid drilldownlevel="2" datasource="dataItem.Options" issubgrid>
+                            <vr-datagridcolumn headertext="'Supplier'" field="'Supplier'">
+                            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Rate'" field="'Rate'" widthfactor="3">
+                            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'">
+                            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Services Flag'" field="'ServicesFlag'" widthfactor="3">
+                            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Percentage'" field="'Percentage'" widthfactor="3">
+                            </vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Priority'" field="'Priority'" widthfactor="3">
+                            </vr-datagridcolumn>
+                        </vr-datagrid>
                     </vr-datagridexpandablerow>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
-       
     </div>
-
 </vr-panel>
