--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/ExecuteStrategyProcessInput.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/ExecuteStrategyProcessInput.html
@@ -1,8 +1,8 @@
 ﻿<div ng-controller="FraudAnalysis_ExecuteStrategyProcessInputController">
-    <vr-form name="formExecuteStrategyProcessInput">
+    <vr-form name="formCreateProcessInput">
         <vr-row removeline>
             <vr-columns colnum="3">
-                <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" isrequired></vr-select>
+                <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" ismultipleselection selectedvalues="selectedStrategies" isrequired>  </vr-select>
             </vr-columns>
             <vr-columns colnum="3">
                 <vr-select datasource="periods" datatextfield="Name" datavaluefield="Id" label="Period" selectedvalues="selectedPeriod" isrequired></vr-select>
